--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -1,95 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/layout_padding"
-    android:visibility="visible">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/parent_scrollview"
+        app:layout_constraintEnd_toStartOf="@+id/parent_scrollview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/restaurant_header_image_height"
-            android:id="@+id/header_image"
-            android:scaleType="centerCrop"/>
+        <ProgressBar
+            android:id="@+id/detail_loading_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
 
-        <TextView
-            android:id="@+id/restaurant_details_error_msg"
+    </RelativeLayout>
+
+    <ScrollView
+        android:id="@+id/parent_scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/layout_padding"
+        android:visibility="gone">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingBottom="@dimen/padding"
-            android:paddingTop="@dimen/padding"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="@dimen/text_size"
-            android:textStyle="bold"
-            android:visibility="gone"
-            tools:text="Something bad happened :(" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/restaurant_details_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/large_text_size"
-            android:textStyle="bold"
-            android:text="@string/restaurant_name" />
-
-        <TextView
-            android:id="@+id/restaurant_details_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/padding"
-            android:paddingTop="@dimen/padding"
-            android:textSize="@dimen/text_size"
-            android:text="@string/restaurant_type" />
-
-        <TextView
-            android:id="@+id/restaurant_details_rating"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/padding"
-            android:paddingTop="@dimen/padding"
-            android:text="@string/review_ratings" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/padding"
-            android:paddingTop="@dimen/padding">
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/header_image"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/restaurant_header_image_height"
+                android:scaleType="centerCrop" />
 
             <TextView
-                android:id="@+id/restaurant_details_delivery_fee"
-                android:layout_width="wrap_content"
+                android:id="@+id/restaurant_details_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/header_image"
+                android:text="@string/restaurant_name"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:text="@string/delivery_cost" />
+                android:textSize="@dimen/large_text_size"
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/restaurant_details_status"
-                android:layout_width="0dp"
+                android:id="@+id/restaurant_details_description"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:text="@string/arriving_minutes" />
+                android:layout_below="@+id/restaurant_details_name"
+                android:paddingTop="@dimen/padding"
+                android:paddingBottom="@dimen/padding"
+                android:text="@string/restaurant_type"
+                android:textSize="@dimen/text_size" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/restaurant_details_rating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/restaurant_details_description"
+                android:paddingTop="@dimen/padding"
+                android:paddingBottom="@dimen/padding"
+                android:text="@string/review_ratings" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="vertical"
-            android:id="@+id/menu_container">
-        </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+            <LinearLayout
+                android:id="@+id/fee_status"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/restaurant_details_rating"
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/padding"
+                android:paddingBottom="@dimen/padding">
+
+                <TextView
+                    android:id="@+id/restaurant_details_delivery_fee"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/delivery_cost"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/restaurant_details_status"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="@string/arriving_minutes"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/tag_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fee_status"
+                android:orientation="vertical"
+                android:padding="10dp"/>
+        </RelativeLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
