--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -4,6 +4,9 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:cardCornerRadius="8dp"
     app:cardElevation="10dp">
 
     <LinearLayout
@@ -14,7 +17,8 @@
         <ImageView
             android:id="@+id/restaurant_cover_image"
             android:layout_width="@dimen/image_padding"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
             android:contentDescription="@string/app_name" />
 
         <LinearLayout
