--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -20,6 +20,25 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/parent_scrollview"
+        app:layout_constraintEnd_toStartOf="@+id/parent_scrollview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/error_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textSize="@dimen/text_size"
+            android:text="@string/error_message"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
+
     <ScrollView
         android:id="@+id/parent_scrollview"
         android:layout_width="match_parent"
