--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -73,8 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/restaurant_details_name"
                 android:paddingTop="@dimen/padding"
-                android:paddingBottom="@dimen/padding"
-                android:text="@string/restaurant_type"
+                android:text="@string/restaurant_description"
                 android:textSize="@dimen/text_size" />
 
             <TextView
@@ -83,56 +82,32 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/restaurant_details_description"
                 android:paddingTop="@dimen/padding"
-                android:paddingBottom="@dimen/padding"
-                android:text="@string/review_ratings" />
+                android:text="@string/arriving_status" />
+
+            <TextView
+                android:id="@+id/restaurant_status_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/restaurant_status"
+                android:paddingTop="@dimen/padding"
+                android:text="@string/open_status" />
 
             <TextView
                 android:id="@+id/restaurant_details_rating"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/restaurant_status"
+                android:layout_below="@+id/restaurant_status_type"
                 android:paddingTop="@dimen/padding"
-                android:paddingBottom="@dimen/padding"
-                android:text="@string/review_ratings" />
-
-            <LinearLayout
-                android:id="@+id/fee_status"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/restaurant_details_rating"
-                android:orientation="horizontal"
-                android:paddingTop="@dimen/padding"
-                android:paddingBottom="@dimen/padding">
-
-                <TextView
-                    android:id="@+id/restaurant_details_delivery_fee"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/delivery_cost"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/restaurant_status_type"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:text="@string/arriving_minutes"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
+                android:text="@string/restaurant_rating" />
 
             <TextView
                 android:id="@+id/tags_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/fee_status"
+                android:layout_below="@+id/restaurant_details_rating"
+                android:paddingTop="@dimen/padding"
                 android:text="@string/tags_label"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/text_size"
-                android:textStyle="bold" />
+                android:textSize="@dimen/text_size" />
 
             <LinearLayout
                 android:id="@+id/tag_container"
@@ -140,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tags_label"
                 android:orientation="vertical"
-                android:padding="10dp"/>
+                android:padding="@dimen/layout_padding"/>
         </RelativeLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
