--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -26,10 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingStart="@dimen/left_padding"
-            android:paddingTop="@dimen/top_padding"
-            android:paddingEnd="@dimen/right_padding"
-            android:paddingBottom="@dimen/bottom_padding">
+            android:padding="@dimen/padding">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -41,7 +39,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    tools:ignore="UselessParent">
 
                     <TextView
                         android:id="@+id/restaurant_item_name"
@@ -56,7 +55,7 @@
                         android:id="@+id/restaurant_item_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/restaurant_desc" />
+                        android:text="@string/restaurant_description" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -70,7 +69,7 @@
                     android:id="@+id/restaurant_item_delivery_fee"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/restaurant_cost"
+                    android:text="@string/restaurant_delivery_fee"
                     android:textColor="@android:color/black" />
 
                 <TextView
@@ -79,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="@string/open_still"
+                    android:text="@string/open_status"
                     android:textColor="@android:color/black" />
 
             </LinearLayout>
